plugins {
    id 'java'
    id 'application'
    id 'io.quarkus' version '3.23.0'
}

java {
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
}

tasks.withType(JavaCompile) {
    options.compilerArgs << '-parameters'
}

repositories {
    ivy {
        ivyPattern "https://sissource.ethz.ch/openbis/openbis-public/openbis-ivy/-/raw/main/[organisation]/[module]/[revision]/ivy.xml"
        artifactPattern "https://sissource.ethz.ch/openbis/openbis-public/openbis-ivy/-/raw/main/[organisation]/[module]/[revision]/[artifact]-[revision](-[classifier]).[ext]"
    }
    mavenCentral()
}

dependencies {
    annotationProcessor 'lombok:lombok:1.18.38'

    implementation 'lombok:lombok:1.18.38',
            'lombok:lombok:1.18.22',
            project(':lib-logging'),
            project(':lib-ro-crate'),
            project(':app-ro-crate-openbis')
    implementation(project(':api-openbis-java'))
    implementation enforcedPlatform("io.quarkus:quarkus-bom:3.23.0"), // Any dependencies coming from quarkus take precedence
            'io.quarkus:quarkus-resteasy:3.23.0',
            'edu.kit.datamanager:ro-crate-java:2.0.1',
            'com.networknt:json-schema-validator:1.5.7',
            'net.lingala.zip4j:zip4j:2.11.5',
            'com.fasterxml.jackson.core:jackson-core:2.18.3',
            'com.fasterxml.jackson.core:jackson-databind:2.18.3'

    testImplementation 'testng:testng:6.8-CISD',
            'io.rest-assured:rest-assured:5.5.5'


}

test {
    useTestNG()
}

mainClassName = "ch.ethz.sis.openbis.ros.startup.StartupMain"

task openBISDevelopmentEnvironmentROSStart(type: JavaExec) {
    mainClass = mainClassName
    classpath = sourceSets.main.runtimeClasspath
    args(["../server-ro-crate/src/main/resources/service.properties"])
    jvmArgs(['--add-opens=java.base/jdk.internal.misc=ALL-UNNAMED',
             '--add-opens=java.base/java.nio=ALL-UNNAMED',
             '-Dio.netty.tryReflectionSetAccessible=true',
             '-Xmx512M', '-ea'])
}